# MapleStorySDLCPP

./: .gitignore  CMakeLists.txt  MapleSDL.sln  MapleStory-Remake.sln  README.md
2DSDLGame/: 2DSDLGame.VC.VC.opendb  2DSDLGame.sln
2DSDLGame/2DSDLGame/: 2DSDLGame.vcxproj  2DSDLGamevcxproj.filters  character_framework.h  color.h  config.h  core.h  input.cpp  input.h  main.cpp  mob_framework.h  sprite_framework.h
MapleGLDev/: MapleGLDev.sln  README.md  Readme.md
MapleGLDev/MapleGLDev/: Camera.cpp  Camera.hpp  Entity.cpp  Entity.h  Game.cpp  Game.h  Game.hpp  GameMap.cpp  GameMap.hpp  GameUtils.hpp  HelperFunctions.hpp  Input.cpp  Input.h  ItemDrop.cpp  ItemDrop.hpp  LFRect.h  LOpenGL.h  LTexCoord.h  LTexture.cpp  LTexture.h  LUtil.cpp  LUtil.h  LVertexData2D.h  LVertexPos2D.h  MapleGLDev.vcxproj  MapleGLDev.vcxproj.filters  MessageDispatch.cpp  MessageDispatch.h  RelativeSpace.hpp  SpawnManager.cpp  SpawnManager.h  main.cpp  packages.config  tinyxml2.lib
MapleSDL/: AnimatedSprite.cpp  AnimatedSprite.h  AnimatedSprite.hpp  Box.cpp  Box.h  Camera.cpp  Camera.hpp  CommandCentral.cpp  CommandCentral.h  Dynamic2DCharacter.cpp  Dynamic2DCharacter.hpp  Entity.cpp  Entity.h  Entity.hpp  Game.cpp  Game.h  Game.h.orig  Game.hpp  GameDebug.h  GameDebug.hpp  GameMap.cpp  GameMap.h  GameObject.cpp  GameObject.h  GameUtils.h  Global.h  HUD.cpp  HUD.h  HUD.hpp  HelperFunctions.h  HelperFunctions.hpp  Input.cpp  Input.h  Inventory.cpp  Inventory.h  ItemDrop.cpp  ItemDrop.hpp  Map.cpp  Map.h  MapleSDL.vcxproj  (+17 more)
MapleSDL/B2D/: Box2D.lib  Readme.md  (+3 more)
MapleStory-Remake/: GAME.h  KEENIO_SDK.h  MOB_ENTITY.cpp  MOB_ENTITY.h  MapleStory-Remake.vcxproj  MapleStory-Remake.vcxproj.filters  NPC.h  SPRITE_ANIMATION.h  hitbox.cpp  hitbox.h  hitbox2.h  input.cpp  input.h  main.cpp  map.h  packages.config  physics.cpp  physics.h  player.h  player_anims.xml  skillbook.h  spawn.h
Tutorials/: MMORPGTutorials.sln  README.md
(+34 files in other folders)
